sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: ':' expected but ')' found.
def bubbleSort(list) : List = {
                   ^AlgBubbleSort1:20: error: identifier expected but '}' found.
}
^